<resources>
    <string name="app_name">Data Structure</string>
    <string-array name="code_operation">
        <item>show code on clicked button</item>
        <item>do operation on clicked button</item>
    </string-array>
    <string name="data_edit_text">enter data</string>
    <string name="index_edit_text">enter index</string>
    <string-array name="insertion_choice_array">
        <item>insert at first</item>
        <item>insert at last</item>
        <item>insert at specific index</item>
        <item>insert in sorted array</item>
    </string-array>
    <string-array name="insertion_choice_list">
        <item>insert at first</item>
        <item>insert at last</item>
        <item>insert at specific index</item>
        <item>insert in sorted list</item>
    </string-array>
    <string-array name="deletion_choice">
        <item>delete first</item>
        <item>delete last</item>
        <item>delete from specific index</item>
        <item>delete specific item</item>
    </string-array>
    <string-array name="get_choice">
        <item>get data from specific index</item>

    </string-array>
    <string-array name="search_choice">
        <item>linear search</item>
        <item>binary search</item>
    </string-array>
    <string-array name="sort_choice">
        <item>insertion sort</item>
        <item>selection sort</item>
        <item>bubble sort</item>
        <item>quick sort</item>
    </string-array>
    <string name="linear_algo"><![CDATA[
(Linear Search) LINEAR(DATA, N, ITEM, LOC)<br/>
Here DATA is Linear Array with N elements,<br/>
and ITEM is a given item of information. This<br/>
Algorithm finds the location LOC of ITEM in<br/>
DATA, or sets LOC:=0 if the search is unsuccessful.

<br/><br/>
1.Repeat for LOC:= 1 to N by 1<br/><br/>
2. if DATA[LOC]= ITEM<br/><br/>
   \t\t    a. return LOC<br/><br/>
   \t\t    [End of loop.]<br/><br/>
3.Set LOC :=0.<br/><br/>
4.Exit.
]]></string>
    <string name="binary_algo"><![CDATA[
 (Binary Search) BINARY(DATA, LB, UB, ITEM, LOC)<br/>
 Here DATA is a sorted array with lower bound LB and uppers bound UB,<br/>
  and ITEM is given item of information. The variables BEG,<br/>
  END and MID denote respectively, the beginning, end a <br/>
   locations of a segment of elements of DATA. This algorithms <br/>
finds the location LOC of ITEM in DATA or sets DATA=NULL<br/><br/>
[Initialize Segment Variables.]<br/><br/>
1.Set BEG:= LB, END:= UB and MID:=(INT(BEG+END)/2).<br/><br/>
2.Repeat Steps 3 and 4 while BEG < END and DATA[MID]!= iTEM.<br/><br/>
3.if ITEM < DATA[MID], than:<br/><br/>
   \t\t    Set END := MID-1.<br/><br/>
  Else<br/><br/>
     \t\t   Set BEG:= MID+1<br/><br/>
  [End of lf structure.]<br/><br/>
4.  Set MID:=(INT(BEG+END)/2).<br/><br/>
 [End of Step 2 loop.]<br/><br/>
5.if DATA[MID] := ITEM, than:<br/><br/>
  \t\t     Set LOC := MID<br/><br/>
Else<br/><br/>
   \t\t    Set LOC := NULL<br/><br/>
6.Exit
]]></string>
    <string name="get_at_algo"><![CDATA[
 (GET_AT) GET_AT(A,N,ITEM,I)<br/>
        here A is a linear Array with N elements.<br/>this algorithm will return ITEM at index I.<br/><br/>
1.if I < = N and I > 0<br/><br/>
 \t\t      Set ITEM := A [ I ]<br/><br/>
2.Exit
]]></string>
    <string name="insert_algo"><![CDATA[
(Insertion Sort) INSERTION(A,N)<br/>
This Algorithms sorts the array A with N elements.<br/><br/>

1. 	Repeat Step 2 to 5 for k:=2 to N:<br/><br/>
2.		Set TEMP := A[K] and PTR := K-1<br/><br/>
3. 		Repeat while PTR>0 and TEMP < A[PTR]:<br/><br/>
		    \t\t        (a)  Set A[PTR+1] := A[PTR]. [Moves element forward.]<br/><br/>
		 \t\t           (b)  Set PTR:= PTR-1.<br/><br/>
4. 		Set A[PTR+1] := TEMP. [Inserts elements in proper places.]<br/><br/>
5.	Exit.<br/><br/>

]]></string>
    <string name="bubble_algo"><![CDATA[
    	(Bubble Sort)	BUBBLE(DATA, N)<br/>
			Here DATA is an array with N elements. This <br/>algorithm sorts the elements in DATA.<br/><br/>

1.	Repeat Step 2 and 3 for K=1 to N-1<br/><br/>
2.		Set PTR:=1 [Initializes pas pointer PTR]<br/><br/>
3.		      Repeat while PTR  N – K: [Execute pass.]<br/><br/>
		  \t\t    (a)  If DATA[PTR] > DATA[PTR+1], than:<br/><br/>
			 \t\t   \t\t   Interchange DATA[PTR] and DATA[PTR+1].<br/><br/>
		       \t\t      [End of if Structure.]<br/><br/>
		   \t\t   (b)  Set PTR := PTR+1.<br/><br/>
	[End of inner loop.]<br/><br/>
[End of Step 1 outer loop]<br/><br/>
4.	Exit.
]]></string>
    <string name="selection_algo"><![CDATA[
     (Selection Sort) SELECTIONSORT(A, N)<br/>
	The Algorithm Sorts the Array A with N Elements.<br/><br/>

1. 	Repeat step 2 to 5 from out :=1 to N-1.<br/><br/>
2.		Set min := out.<br/><br/>
3.		Set in := out+1.<br/><br/>
4.		Repeat while in < = N.<br/><br/>
       \t\t     a.if A[in] < A[min], than:<br/><br/>
		  \t\t     \t\t       min := in.<br/><br/>
     \t\t       b.in := in+1.<br/><br/>
5.		Interchange A[out] and A[min].<br/><br/>
6.	Exit.<br/><br/>


]]></string>
    <string name="merge_algo"><![CDATA[

]]></string>
    <string name="quick_algo"><![CDATA[
   QUICKSORT.(A, S, E)<br/>
   here A is unsorted linear array with first index S and last index E.<br/>
   This algorithm sorts array A recursively in ascending order.<br/><br/>
1. if S > = E.<br/><br/>
   \t\t    return.<br/><br/>
2. Set q := PARTITION (A, S, E)<br/><br/>
3. call QUICKSORT (A, S, q - 1)<br/><br/>
4. call QUICKSORT (A, q + 1, E)<br/><br/>
<br/><br/>
 PARTITION ( A, S, E)<br/>
 here A is unsorted linear array with first index S and last index E.<br/>
 This algorithm is doing partition of array and return the index of pivot element of array A.<br/><br/>
1. Set x := A [ E ].<br/><br/>
2. Set PIVOT_INDEX := S.<br/><br/>
3. for j := S to E  by 1.<br/><br/>
   \t\t   a. if A [ j ] < = x.<br/><br/>
    \t\t   \t\t      exchange A [ PIVOT_INDEX ] with A [ j ].<br/><br/>
     \t\t   \t\t     PIVOT_INDEX := PIVOT_INDEX + 1.<br/><br/>
4. exchange A [ PIVOT_INDEX ]  with A [ E ].<br/><br/>
5. return PIVOT_INDEX.<br/><br/>


]]></string>
    <string name="insertion_algo"><![CDATA["
    (inserting into a Linear Array) INSERT(LA,N,K,ITEM)<br/>
Here LA is the linear array with N elements and K is<br/>
a positive integer such that K < = N. This algorithm<br/>
inserts an element ITEM into the Kth position in LA.<br/><br/>
1. [initialize counter.] Set J := N <br/><br/>
2. Repeat Step 3 and 4 while J > K <br/><br/>
3. [Move Jth element downward.] Set LA [ J+1 ] := LA [J].<br/><br/>
4. [Decrease counter.] Set J := j-1.<br/><br/>
[End of Step 2 Loop]<br/><br/>
5.[insert element.] Set LA [K] := ITEM.<br/><br/>
6.[Reset N.] Set N:=N + 1.<br/><br/>
7.exit<br/><br/>
"
    ]]></string>
    <string name="deletion_algo"><![CDATA["
    Algorithm 4.3: (Deleting from a Linear Array) DELETE(LA, N, K, ITEM)<br/>
    Here LA is a linear array with N elements and K is a positive integer such<br/>
     that K < = N. This algorithm deletes the Kth element from LA.<br/><br/>
    1. Set ITEM :=LA[K].<br/><br/>
    2. Repeat for J=K to N-1:<br/><br/>
    [Move J+1st Element upward.] Set LA [J] := LA[ J+1 ].<br/><br/>
    [End of loop]<br/><br/>
    3. [Reset number N of elements in LA.] Set N := N-1.<br/><br/>
    4. Exit"
    ]]></string>
    <string name="insert_first_code"><![CDATA["
	public String insertFirst(int [] arr, int nElement , int data, int size){<br/><br/>

		if(nElement >= size)<br/>
			return \"array is full\";<br/><br/>
		<br/><br/>
		for(int i = nElement-1; i >= 0 ; i--)<br/>
		arr[i+1]=arr[i];<br/><br/>
		arr[0]=data;<br/><br/>
		nElement++;<br/><br/>
		return data +\" inserted at first \";<br/><br/>
	}//end insertFirst()"
]]></string>
    <string name="insert_last_code"><![CDATA["
   public String insertLast(int [] arr, int nElement , int data, int size) {<br/><br/>

		if(nElement >= size)<br/>
		    return \"array is full\";<br/><br/>

		arr[nElement++]=data;<br/><br/>
		return data +\" inserted at last \";<br/><br/>
	}//end insert()<br/><br/>"
]]></string>
    <string name="insert_in_sorted_code"><![CDATA["
public String insertInSorted(int [] arr, int nElement , int data , int size){<br/><br/>

		if(nElement >= size)<br/>
			return \"array is full\";<br/><br/>
		int i=nElement-1;<br/><br/>
		try {<br/><br/>
			while (i >= 0 && data < = arr[i] ) {<br/>
				arr[i + 1] = arr[i];<br/>
				i--;<br/>
			}<br/><br/>
			arr[i + 1] = data;<br/><br/>
			nElement++;<br/><br/>
			return data + \" inserted in sorted array \";<br/><br/>
		}catch (IndexOutOfBoundsException e){<br/><br/>
			return e.getMessage();<br/><br/>
		}<br/><br/>
	}//end insertInSorted()<br/><br/>"
]]></string>
    <string name="insert_at_code"><![CDATA["
	public String insert(int [] arr, int nElement , int data , int size , int i) {<br/><br/>

		if(nElement >= size)<br/>
		    return \"array is full\";<br/><br/>
		if(i > nElement || i < 0) <br/>
			return \"invalid index\";<br/><br/>


		for(int j = nElement-1 ; j >= i ; j--)<br/>
			arr[j+1]=arr[j];<br/><br/>
		arr[i]=data;<br/><br/>
		nElement++;<br/><br/>
		return data +\" inserted at \" +i+\"th index\";<br/><br/>
	}//end insert()<br/><br/>"

]]></string>
    <string name="delete_first_code"><![CDATA["
public String deleteFirst(int [] arr, int nElement ){<br/><br/>
		if(nElement == 0)<br/>
			return \"array is empty\" ;<br/><br/>

		int data= arr[0];<br/><br/>
		for (int i = 0 ; i < nElement ;i++)<br/>
			arr[i]=arr[i+1];<br/><br/>
		nElement--;<br/><br/>
		return data +\" is deleted \";<br/><br/>
	}//end deleteFirst()<br/><br/>"
]]></string>
    <string name="delete_last_code"><![CDATA[

"	public String deleteLast(int [] arr, int nElement){<br/><br/>
		if(nElement == 0)<br/>
			return "array is empty" ;<br/><br/>

		int data= arr[nElement-1];<br/><br/>
		nElement--;<br/><br/>
		return data +\" is deleted\";<br/><br/>
	}//end deleteLast()<br/><br/>
 "  ]]></string>
    <string name="array"> <p><b>ARRAY</b></p><![CDATA["
An array is a collection of items stored at contiguous memory locations.It can hold a fix number of items and these items should be of the same type."]]></string>
    <string name="stack"><p><b>STACK</b></p><![CDATA["
Stack is an abstract data type that serves as a collection of elements, with two main principal operations: Push, which adds an element to the collection, and. Pop, which removes the most recently added element that was not yet removed."]]></string>
    <string name="queue"><p><b>QUEUE</b></p><![CDATA["
Queue is an abstract data type that serves as a collection of items in which only the earliest added item may be accessed. Basic operations are add (to the tail) or enqueue and delete (from the head) or dequeue."]]></string>
    <string name="linkedlist"><p><b>LINKED LIST</b></p><![CDATA["
A linked list is a linear collection of data elements whose order is not given by their physical placement in memory. Instead, each element points to the next. It is a data structure consisting of a collection of nodes which together represent a sequence."]]></string>
    <string name="tree"><p><b>TREE</b></p><![CDATA["
A tree is a abstract data type that simulates a hierarchical tree structure, with a root value and subtrees of children with a parent node, represented as a set of linked nodes."]]></string>
    <string name="graph"><p><b>GRAPH</b></p> <![CDATA["
A graph is an abstract data type that consists of V, a nonempty set of vertices (or nodes) and E, a set of edges. Each edge has either one or two vertices associated with it."]]></string>
</resources>